--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -9,10 +9,10 @@
   justify-content: center;
 }
 
-.logon-container section {
+.logon-container section.form {
   width: 100%;
   max-width: 350px;
-  margin-right: 3px;
+  margin-right: 30px;
 }
 
 .logon-container section.form form {
@@ -32,7 +32,7 @@
   font-size: 18px;
   text-decoration: none;
   font-weight: 500;
-  /* transition: opacity 0.5s; */
+  transition: opacity 0.5s;
 }
 
 .logon-container section.form form a svg{
